--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/vim-haml"]
 	path = bundle/vim-haml
 	url = git@github.com:tpope/vim-haml.git
+[submodule "bundle/php-vim"]
+	path = bundle/php-vim
+	url = git@github.com:StanAngeloff/php.vim.git
