--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/vim-javascript"]
 	path = bundle/vim-javascript
 	url = git@github.com:pangloss/vim-javascript.git
+[submodule "bundle/vim-styled-components"]
+	path = bundle/vim-styled-components
+	url = git@github.com:fleischie/vim-styled-components.git
